plugins {
  id 'java'
  id 'application'
  id 'com.github.johnrengelman.shadow' version '5.2.0'
}

mainClassName = 'dcl.Pilot'
group 'io.github.rxcmr'
version '1.7.0l'

targetCompatibility = 13
sourceCompatibility = 13

dependencies {
  implementation group: "net.dv8tion", name: "JDA", version: "4.0.0_77"
  //implementation group: "com.github.DV8FromTheWorld", name: "JDA", version: "development-SNAPSHOT"
  implementation group: "io.github.cdimascio", name: "java-dotenv", version: "5.1.3"
  implementation group: "ch.qos.logback", name: "logback-classic", version: "1.3.0-alpha5"
  implementation group: "org.slf4j", name: "slf4j-api", version: "2.0.0-alpha1"
  implementation group: "com.jagrosh", name: "jda-utilities", version: "3.0.2"
  implementation group: "com.jagrosh", name: "JagTag", version: "0.5"
  implementation group: "com.sedmelluq", name: "lavaplayer", version: "1.3.32"
  implementation group: "com.squareup.okhttp3", name: "okhttp", version: "4.2.2"
  implementation group: "org.codehaus.groovy", name: "groovy", version: "3.0.0-rc-2"
  implementation group: "io.github.classgraph", name: "classgraph", version: "4.8.58"
  implementation group: "org.apache.commons", name: "commons-text", version: "1.8"
  implementation group: "org.apache.commons", name: "commons-lang3", version: "3.9"
  implementation group: "org.xerial", name: "sqlite-jdbc", version:"3.28.0"
}

repositories {
  jcenter()
  mavenCentral()
  maven { url 'https://jitpack.io' }
}

shadowJar {
  minimize()
}

tasks.withType(JavaCompile).each {
  it.options.compilerArgs.add('--enable-preview')
}

compileJava {
  options.compilerArgs += ["--enable-preview"]
}

test {
  jvmArgs(['--enable-preview'])
}

defaultTasks "afterBuild"

task(afterBuild, dependsOn: 'classes', type: JavaExec) {
  main = mainClassName
  classpath = sourceSets.main.runtimeClasspath
}

compileJava.options.encoding = 'UTF-8'
